--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Autenticación</title>
     <link rel="stylesheet" href="estilos.css">
 
-    <script src="/__/firebase/8.2.1/firebase-app.js"></script>
-    <script src="/__/firebase/8.2.1/firebase-auth.js"></script>
-    <script src="/js/init.js"></script>
+   <!-- Carga el núcleo de Firebase JS SDK -->
+    <script
+      src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <!-- Agrega el manejo de autenticación. -->
+    <script
+      src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+    <script src="js/init.js"></script>
   </head>
   <body>
     <h1>Autenticación</h1>
