--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
    <!-- Carga el núcleo de Firebase JS SDK -->
     <script
-      src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+      src=""></script>
     <!-- Agrega el manejo de autenticación. -->
     <script
-      src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+      src="https://firebase.google.com/docs/reference/js/firebase.auth.GoogleAuthProvider"></script>
     <script src="js/init.js"></script>
   </head>
   <body>
