--- a/index.html
+++ b/index.html
@@ -10,20 +10,9 @@
     <script
     src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
     </script>
-  <script
-    src="https://www.gstatic.com/firebasejs/8.2.3/firebase-auth.js">
-    </script>
-   
     <!-- Agrega el manejo de autenticación. -->
-     <!-- Servicio de autenticación de usuarios. -->
-    <script
-      src="https://firebase.google.com/docs/reference/js/firebase.auth.Auth"></script>
-    <!-- Implementación de seguridad por ejemplo Google, Microsoft, Twiter, etc. -->
-    <script
-      src="https://firebase.google.com/docs/reference/js/firebase.auth.AuthProvider"></script>
-    <!-- Implementación de AuthProvider que usa el sistema de seguridadde Google, -->
-    <script
-      src="https://firebase.google.com/docs/reference/js/firebase.auth.GoogleAuthProvider"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-auth.js">
+    </script>
     <script src="js/init.js"></script>
   </head>
   <body>
