--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
 
    <!-- Carga el núcleo de Firebase JS SDK -->
-    <script
-    src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js">
-    </script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
     <!-- Agrega el manejo de autenticación. -->
     <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-auth.js">
     </script>
